--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "leanr-js-linting",
+  "name": "learn-typescript-linting",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "compile": "tsc -p tsconfig.json",
-    "start": "node lib/index.js"
+    "start": "node lib/index.js",
+    "lint": "eslint 'src/**/*.ts'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^1.7.0",
+    "@typescript-eslint/parser": "^1.7.0",
+    "eslint": "^5.16.0",
     "typescript": "^3.4.5"
   }
 }
