--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
     "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "prettier": "^1.17.0",
     "typescript": "^3.4.5"
+  },
+  "prettier": {
+    "semi": false
   }
 }
