--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "learn-typescript-linting",
-  "version": "0.1.0",
-  "description": "",
-  "main": "lib/index.js",
+  "version": "1.0.0",
+  "description": "A basic TypeScript library for use with the @MatterhornDev Learn TypeScript Linting post",
   "scripts": {
     "compile": "tsc -p tsconfig.json",
     "start": "node lib/index.js",
     "lint": "eslint 'src/**/*.ts'"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [ "typescript", "eslint", "standardjs", "prettier", "linting" ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MatterhornDev/learn-typescript-linting.git"
+  },
+  "author": "Ethan Arrowood",
+  "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.7.0",
     "@typescript-eslint/parser": "^1.7.0",
