--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "leanr-js-linting",
-  "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "name": "learn-typescript-linting",
+  "version": "1.0.0",
+  "description": "A basic TypeScript library for use with the @MatterhornDev Learn TypeScript Linting post",
   "scripts": {
     "compile": "tsc -p tsconfig.json",
     "start": "node lib/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [ "typescript", "eslint", "standardjs", "prettier", "linting" ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MatterhornDev/learn-typescript-linting.git"
+  },
+  "author": "Ethan Arrowood",
+  "license": "MIT",
   "devDependencies": {
     "typescript": "^3.4.5"
   }
