Revert "Add missing props"
This reverts commit 412d7bf160bd63e3017ac2008860b9c824f4adf2.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,8 +5,7 @@
   "env": { "node": true },
   "parserOptions": {
     "ecmaVersion": 5,
-    "sourceType": "module",
-    "project": "./tsconfig.json"
+    "sourceType": "module"
   },
   "rules": {
     "no-console": "warn",
